--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -6,10 +6,10 @@
         <main class="centered">
             <h1><%= product.title %></h1>
             <div>
-                <img src="<%= product.imageUrl%>" alt="<%= product.title %>">
+                <img style="width: 50%; height: 50%" src="<%= product.imageUrl%>" alt="<%= product.title %>">
             </div>            
             <hr>
-                <h2><%= product.price %></h2>
+                <h2><%= product.price %>$</h2>
                 <p><%= product.description %></p>
                 <%- include('../includes/add-to-cart.ejs') %>
         </main>
