--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -23,12 +23,14 @@
                         </div>
                         <div class="card__actions">
                             <a href="/products/<%= product._id %>" class="btn">Details</a>
+                            <% if(isAuthenticated) { %>
                             <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                            <% } %>
                         </div>
                     </article>
                 <% } %>
             </div>
-        <% } else { %>
+        <%} else { %>
             <h1>No Products Found!</h1>
         <% } %>
     </main>
